--- a/package.json
+++ b/package.json
@@ -10,8 +10,9 @@
     "gulp-rename": "^1.2.0"
   },
   "devDependencies": {
-    "bower": "^1.3.3",
-    "gulp-util": "^2.2.14",
-    "shelljs": "^0.3.0"
+    "grunt": "^0.4.5",
+    "grunt-exec": "^0.4.6",
+    "grunt-preprocess": "^4.1.0",
+    "preprocess": "^2.1.0"
   }
 }
