--- a/package.json
+++ b/package.json
@@ -14,5 +14,8 @@
     "grunt-exec": "^0.4.6",
     "grunt-preprocess": "^4.1.0",
     "preprocess": "^2.1.0"
-  }
+  },
+  "cordovaPlugins": [
+    "https://github.com/brodysoft/Cordova-SQLitePlugin.git"
+  ]
 }
