--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "org.apache.cordova.console",
     "org.apache.cordova.geolocation",
     "https://github.com/phonegap-build/PushPlugin.git",
-    "org.apache.cordova.inappbrowser"
+    "org.apache.cordova.inappbrowser",
+    "https://github.com/katzer/cordova-plugin-local-notifications"
   ]
 }
