--- a/plugins/de.appplant.cordova.plugin.local-notification/plugin.xml
+++ b/plugins/de.appplant.cordova.plugin.local-notification/plugin.xml
@@ -3,29 +3,45 @@
 <plugin xmlns="http://apache.org/cordova/ns/plugins/1.0"
         xmlns:android="http://schemas.android.com/apk/res/android"
         id="de.appplant.cordova.plugin.local-notification"
-        version="0.7.8">
+        version="0.8.1">
 
     <name>LocalNotification</name>
 
-    <description>A bunch of local-notification plugins for Cordova 3.x.x</description>
-    <repo>https://github.com/katzer/cordova-plugin-local-notifications/tree/0.7</repo>
-    <keywords>notification, local notification, alarm, scheduler, tile, live tiles, ios, android, windows phone 8, wp8, iOS8</keywords>
+    <description>The plugin supports scheduling local notifications in various ways with a single interface. It also allows you to update, clear or cancel them. There are different interfaces to query for local notifications and a complete set of events to hook into the life cycle of local notifications. To get a deep overview we recommend to read about all the topics in our wiki and try out the Kitchen Sink App</description>
+
+    <repo>https://github.com/katzer/cordova-plugin-local-notifications.git</repo>
+
+    <keywords>appplant, notification, local notification</keywords>
+
     <license>Apache 2.0</license>
 
     <author>Sebastián Katzer</author>
 
+    <!-- cordova -->
     <engines>
         <engine name="cordova" version=">=3.0.0" />
     </engines>
 
-    <dependency id="org.apache.cordova.device" url="https://github.com/apache/cordova-plugin-device" />
+    <!-- dependencies -->
+    <dependency id="org.apache.cordova.device" />
 
+    <!-- info -->
+    <info>
+        Your support is needed. If you use the plugin please support us in order to ensure further development.
+        https://github.com/katzer/cordova-plugin-local-notifications/tree/example#how-can-i-support-the-further-development
+
+        Thank you!
+    </info>
+
+    <!-- js -->
     <js-module src="www/local-notification.js" name="LocalNotification">
+        <clobbers target="cordova.plugins.notification.local" />
         <clobbers target="plugin.notification.local" />
     </js-module>
 
     <!-- ios -->
     <platform name="ios">
+
         <config-file target="config.xml" parent="/*">
             <feature name="LocalNotification">
                 <param name="ios-package" value="APPLocalNotification" onload="true" />
@@ -33,12 +49,26 @@
             </feature>
         </config-file>
 
+        <header-file src="src/ios/AppDelegate+APPLocalNotification.h" />
+        <source-file src="src/ios/AppDelegate+APPLocalNotification.m" />
+
         <header-file src="src/ios/APPLocalNotification.h" />
         <source-file src="src/ios/APPLocalNotification.m" />
+
+        <header-file src="src/ios/APPLocalNotificationOptions.h" />
+        <source-file src="src/ios/APPLocalNotificationOptions.m" />
+
+        <header-file src="src/ios/UIApplication+APPLocalNotification.h" />
+        <source-file src="src/ios/UIApplication+APPLocalNotification.m" />
+
+        <header-file src="src/ios/UILocalNotification+APPLocalNotification.h" />
+        <source-file src="src/ios/UILocalNotification+APPLocalNotification.m" />
+
     </platform>
 
     <!-- android -->
     <platform name="android">
+
         <config-file target="res/xml/config.xml" parent="/*">
             <feature name="LocalNotification">
                 <param name="android-package" value="de.appplant.cordova.plugin.localnotification.LocalNotification"/>
@@ -46,54 +76,117 @@
         </config-file>
 
         <config-file target="AndroidManifest.xml" parent="/manifest/application">
-            <!--
-             * The alarm receiver is triggered when a scheduled alarm is fired. This class
-             * reads the information in the intent and displays this information in the
-             * Android notification bar. The notification uses the default notification
-             * sound and it vibrates the phone.
-            -->
-            <receiver android:name="de.appplant.cordova.plugin.localnotification.Receiver" />
 
-            <!--
-             * This class is triggered upon reboot of the device. It needs to re-register
-             * the alarms with the AlarmManager since these alarms are lost in case of
-             * reboot.
-             -->
-            <receiver android:name="de.appplant.cordova.plugin.localnotification.Restore" >
+            <receiver
+                android:name="de.appplant.cordova.plugin.localnotification.TriggerReceiver"
+                android:exported="false" />
+
+            <receiver
+                android:name="de.appplant.cordova.plugin.localnotification.ClearReceiver"
+                android:exported="false" />
+
+            <activity
+                android:name="de.appplant.cordova.plugin.localnotification.ClickActivity"
+                android:launchMode="singleInstance"
+                android:theme="@android:style/Theme.NoDisplay"
+                android:exported="false" />
+
+            <receiver
+                android:name="de.appplant.cordova.plugin.notification.TriggerReceiver"
+                android:exported="false" />
+
+            <receiver
+                android:name="de.appplant.cordova.plugin.notification.ClearReceiver"
+                android:exported="false" />
+
+            <receiver android:name="de.appplant.cordova.plugin.localnotification.RestoreReceiver" android:exported="false" >
                 <intent-filter>
                     <action android:name="android.intent.action.BOOT_COMPLETED" />
                 </intent-filter>
             </receiver>
 
-            <!--
-             * The receiver activity is triggered when a notification is clicked by a user.
-             * The activity calls the background callback and brings the launch inten
-             * up to foreground.
-            -->
-            <activity android:name="de.appplant.cordova.plugin.localnotification.ReceiverActivity" android:launchMode="singleInstance" />
+            <activity
+                android:name="de.appplant.cordova.plugin.notification.ClickActivity"
+                android:launchMode="singleInstance"
+                android:theme="@android:style/Theme.NoDisplay"
+                android:exported="false" />
+
         </config-file>
 
         <config-file target="AndroidManifest.xml" parent="/manifest">
             <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
         </config-file>
 
-        <source-file src="src/android/LocalNotification.java" target-dir="src/de/appplant/cordova/plugin/localnotification" />
-        <source-file src="src/android/Receiver.java"          target-dir="src/de/appplant/cordova/plugin/localnotification" />
-        <source-file src="src/android/Options.java"           target-dir="src/de/appplant/cordova/plugin/localnotification" />
-        <source-file src="src/android/Restore.java"           target-dir="src/de/appplant/cordova/plugin/localnotification" />
-        <source-file src="src/android/ReceiverActivity.java"  target-dir="src/de/appplant/cordova/plugin/localnotification" />
-    </platform>
+        <lib-file src="libs/android/android-support-v4.jar" />
 
-    <!-- wp8 -->
-    <platform name="wp8">
-        <config-file target="config.xml" parent="/*">
-            <feature name="LocalNotification">
-                <param name="wp-package" value="LocalNotification"/>
-            </feature>
-        </config-file>
+        <source-file
+            src="src/android/LocalNotification.java"
+            target-dir="src/de/appplant/cordova/plugin/localnotification" />
 
-        <source-file src="src/wp8/LocalNotification.cs" />
-        <source-file src="src/wp8/Options.cs" />
+        <source-file
+            src="src/android/TriggerReceiver.java"
+            target-dir="src/de/appplant/cordova/plugin/localnotification" />
+
+        <source-file
+            src="src/android/ClickActivity.java"
+            target-dir="src/de/appplant/cordova/plugin/localnotification" />
+
+        <source-file
+            src="src/android/ClearReceiver.java"
+            target-dir="src/de/appplant/cordova/plugin/localnotification" />
+
+        <source-file
+            src="src/android/RestoreReceiver.java"
+            target-dir="src/de/appplant/cordova/plugin/localnotification" />
+
+        <source-file
+            src="src/android/notification/AbstractClearReceiver.java"
+            target-dir="src/de/appplant/cordova/plugin/notification" />
+
+        <source-file
+            src="src/android/notification/AbstractClickActivity.java"
+            target-dir="src/de/appplant/cordova/plugin/notification" />
+
+        <source-file
+            src="src/android/notification/AbstractRestoreReceiver.java"
+            target-dir="src/de/appplant/cordova/plugin/notification" />
+
+        <source-file
+            src="src/android/notification/AbstractTriggerReceiver.java"
+            target-dir="src/de/appplant/cordova/plugin/notification" />
+
+        <source-file
+            src="src/android/notification/AssetUtil.java"
+            target-dir="src/de/appplant/cordova/plugin/notification" />
+
+        <source-file
+            src="src/android/notification/Builder.java"
+            target-dir="src/de/appplant/cordova/plugin/notification" />
+
+        <source-file
+            src="src/android/notification/ClearReceiver.java"
+            target-dir="src/de/appplant/cordova/plugin/notification" />
+
+        <source-file
+            src="src/android/notification/ClickActivity.java"
+            target-dir="src/de/appplant/cordova/plugin/notification" />
+
+        <source-file
+            src="src/android/notification/Manager.java"
+            target-dir="src/de/appplant/cordova/plugin/notification" />
+
+        <source-file
+            src="src/android/notification/Notification.java"
+            target-dir="src/de/appplant/cordova/plugin/notification" />
+
+        <source-file
+            src="src/android/notification/Options.java"
+            target-dir="src/de/appplant/cordova/plugin/notification" />
+
+        <source-file
+            src="src/android/notification/TriggerReceiver.java"
+            target-dir="src/de/appplant/cordova/plugin/notification" />
+
     </platform>
 
 </plugin>
